阶段性提交

--- a/ContactLLS/Base.lproj/Localizable.strings
+++ b/ContactLLS/Base.lproj/Localizable.strings
@@ -14,3 +14,5 @@ ADD_PHONE = "add phone";
 ADD_EMAIL = "add email";
 ADD_BIRTHDAY = "add birthday";
 PHONE = "Phone";
+EMAIL = "Email";
+BIRTHDAY = "Birthday";
